Фикс сообщений о сжатии

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -101,7 +101,7 @@ downloading.step=Скачивание
 uploading.step=Загрузка
 converting.step=Конвертация
 waiting.step=Ожидание обработки
-message.compress.queued=Видео будет сжато\n\
+message.compress.queued=Файл будет сжат\n\
 Место в глобальной очереди: <b>{0}</b>
 message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
 extra.message.dont.send.new.request=Пожалуйста, не отправляйте новый файл, пока ваш последний запрос не будет завершен, иначе он будет отменен.
