--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -101,7 +101,7 @@ downloading.step=Yuklab olish
 uploading.step=Yuklanmoqda
 converting.step=Konversiya
 waiting.step=Qayta ishlashni kutish
-message.compress.queued=Ushbu video siqiladi\n\
+message.compress.queued=Ushbu fayl siqiladi\n\
 Global navbatda sizning joyingiz <b>{0}</b>
 message.dont.send.new.request=Yangi faylni yuklamang, aks holda joriy so'rov bekor qilinadi.
 extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yangi faylni topshirmang yoki u bekor qilinadi.
