Поправил предпреждающее сообщение потому что теперь бот может и увеличивать разрешение

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -136,5 +136,6 @@ video.editing.step=Changing resolution
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
-message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>I can only decrease video resolution.</i>
+message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
+
 
