--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -141,5 +141,5 @@ video.editing.step=Изменение разрешения
 video.editing.resolution.changed=Оригинальное разрешение: <b>{0}</b>\n\
 Результирующее разрешение: <b>{1}</b>
 message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
-message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>Я могу только уменьшить разрешение.</i>
+message.video.resolution.warn=\ud83d\udca1<i>Вы должны знать, что увеличение разрешения видео не означает улучшения качества.</i>
 message.incompressible.audio=Я не могу сжать это аудио
