Выделение кнопки по которой выбрали битрейт output format кнопки для выбора бит рейта и запрет отправки любого битрейта

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -115,7 +115,7 @@ message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
 message.audio.compress.file.not.found=At first send me an audio to compress
-message.audio.compression.choose.bitrate=Send me a <b>bitrate</b> and click <b>Compress</b>. For example 16, 32, 64, 96...
+message.audio.compression.choose.bitrate=Choose a <b>bitrate</b> on the keyboard and click <b>Compress</b>
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
 compress.audio.command.description=Compress audio
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
@@ -137,5 +137,4 @@ video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
-
-
+message.compress.audio.output.format=Result will be sent as: <b>Audio</b>
