--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -119,7 +119,7 @@ message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато.
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
-message.audio.compression.choose.bitrate=Пришлите <b>bitrate</b> и нажмите <b>Сжать</b>. Например 16, 32, 96...
+message.audio.compression.choose.bitrate=Выберите <b>bitrate</b> на клавиатуре и нажмите <b>Сжать</b>
 message.audio.compression.bitrate.out.of.range=Пожалуйста, выберите значение больше 0
 compress.audio.command.description=Сжать аудио
 message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus-самый сжатый формат. Нажмите <b>\u2705Opus</b> для конвертации в формат opus.</i>
@@ -143,3 +143,4 @@ video.editing.resolution.changed=Оригинальное разрешение: 
 message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Вы должны знать, что увеличение разрешения видео не означает улучшения качества.</i>
 message.incompressible.audio=Я не могу сжать это аудио
+message.compress.audio.output.format=Результат будет отправлен как: <b>Аудио</b>
