--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -120,7 +120,7 @@ message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Kichraytiring
 message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi yuborilgan audio siqiladi.
 message.audio.compress.file.not.found=Avval siqishni uchun audio yuboring
-message.audio.compression.choose.bitrate=<b>Bitrate</b> yuboring va <b>Siqish</b> tugmasini bosing. Masalan, 16, 32, 96 ...
+message.audio.compression.choose.bitrate=Klaviaturadan <b>bitrate</b> ni tanlang va <b>Siqish</b> tugmasini bosing
 message.audio.compression.bitrate.out.of.range=0 dan katta qiymatni tanlang
 compress.audio.command.description=Ovozni siqish
 message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus - bu eng siqilgan format. Opusga o'tish uchun <b>\u2705Opus</b> tugmasini bosing.</i>
@@ -144,3 +144,4 @@ Natijada echim: <b>{1}</b>
 message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
+message.compress.audio.output.format=Natija quyidagicha yuboriladi: <b>Audio</b>
