При апдейте статуса если скачка файла уже произошла выделяем галочкой этап скачки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -138,3 +138,4 @@ Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
 message.compress.audio.output.format=Result will be sent as: <b>Audio</b>
+message.compress.audio.bitrate.updated=Bitrate updated
