--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -145,3 +145,4 @@ message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Natija quyidagicha yuboriladi: <b>Audio</b>
+message.compress.audio.bitrate.updated=Bitrate yangilandi
