Fix pdf to epub conversion

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -146,3 +146,4 @@ message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sif
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Natija quyidagicha yuboriladi: <b>Audio</b>
 message.compress.audio.bitrate.updated=Bitrate yangilandi
+message.pdf.images.epub=Matnni pdf-dan epubga aylantirish mumkin emas, shuning uchun pdf rasmlar shaklida epubga aylantirildi
