--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -139,3 +139,4 @@ message.video.resolution.the.same=Video already has the same resolution <b>{0}</
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
 message.compress.audio.output.format=Result will be sent as: <b>Audio</b>
 message.compress.audio.bitrate.updated=Bitrate updated
+message.pdf.images.epub=It is impossible to convert text from pdf to epub, so pdf was converted to epub in the form of pictures
