Conversion timed out

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -140,3 +140,4 @@ message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the v
 message.compress.audio.output.format=Result will be sent as: <b>Audio</b>
 message.compress.audio.bitrate.updated=Bitrate updated
 message.pdf.images.epub=It is impossible to convert text from pdf to epub, so pdf was converted to epub in the form of pictures
+conversion.timed.out=Timed out. Conversion failed.
