--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -146,3 +146,4 @@ message.incompressible.audio=Я не могу сжать это аудио
 message.compress.audio.output.format=Результат будет отправлен как: <b>Аудио</b>
 message.compress.audio.bitrate.updated=Bitrate обновлен
 message.pdf.images.epub=Невозможно преобразовать текст из pdf в epub, поэтому pdf был преобразован в epub в виде картинок
+conversion.timed.out=Время вышло. Конвертация не удалась.
