--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -147,3 +147,4 @@ message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Natija quyidagicha yuboriladi: <b>Audio</b>
 message.compress.audio.bitrate.updated=Bitrate yangilandi
 message.pdf.images.epub=Matnni pdf-dan epubga aylantirish mumkin emas, shuning uchun pdf rasmlar shaklida epubga aylantirildi
+conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
