Отладка и фиксы некоторых вещей

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,7 +18,6 @@ message.unsupported.format=I can’t work with files in this format yet. The sup
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 message.unsupported.file=I can’t work with files in this format yet. Your file mime type is <b>{0}</b>. The supported file formats can be found \
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
-message.query.item.not.found=Query doesn't found. Completed or cancelled or you have sent a new conversion when i was converting this file.
 message.welcome=Welcome to the <b>free</b> converter bot. \n\n\
 The instruction manual and all available formats can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
 Stay tuned! Developers are working on adding new features.\n\n\
@@ -47,7 +46,7 @@ My commands:\n\
 message.formats=All formats list can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
 If any format which you want not supported for now, you can write to us too in <a href="https://t.me/smart_file_utils_support">Customer service</a> \
 and developers will add it.
-message.reply=Thanks for feedback.In the near future, your appeal will be reviewed by the developers and the <b>problem will be fixed</b>.
+message.conversion.report=Thanks for feedback.In the near future, your appeal will be reviewed by the developers and the problem will be fixed.
 report.command.description=Report a bug
 message.choose.type=Choose type for converting on the keyboard
 message.convert.file=Send me a file, link, text, video, audio which you want to convert.
