--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -17,7 +17,6 @@ message.unsupported.format=Hozircha men ushbu formatdagi fayllar bilan ishlashga
 <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin.
 message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmayman. Maym fayl turi <b>{0}</b>. Qo''llab-quvvatlanadigan formatlar ro''yxati siz \
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
-message.query.item.not.found=So'rov topilmadi. Yoki u allaqachon tugatilgan yoki bekor qilingan yoki men ushbu faylni konvertatsiya qilayotganimda siz yangi fayl yuborgansiz.
 message.welcome=<b>Bepul</b> bot konverteriga xush kelibsiz.\n\n\
 Siz bot bilan ishlash bo''yicha ko''rsatmalarni va qo''llab-quvvatlanadigan formatlarning to''liq ro''yxatini topishingiz mumkin \
 Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">SmartFileUtils Bot</a>. \n\
@@ -52,7 +51,7 @@ Mening buyruqlarim:\n\
 message.formats=To'liq ro'yxatni <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>. maqolasida topishingiz mumkin. \n\
 Agar biron bir format etishmayotgan bo'lsa, <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
 ga yozishingiz mumkin va tez orada u qo'llab-quvvatlanadigan formatlarning ro'yxatida paydo bo'ladi.
-message.reply=Fikr-mulohazangiz uchun tashakkur. Yaqin kelajakda sizning murojaatingiz ishlab chiquvchilar tomonidan ko'rib chiqiladi va <b>muammo bartaraf etiladi</b>.
+message.conversion.report=Fikr-mulohazangiz uchun tashakkur. Yaqin kelajakda sizning murojaatingiz ishlab chiquvchilar tomonidan ko'rib chiqiladi va muammo bartaraf etiladi.
 report.command.description=Xato haqida xabar bering
 message.choose.type=Konvertatsiya qilish uchun klaviaturadan turini tanlang
 message.convert.file=Menga o'zgartirmoqchi bo'lgan fayl, havola, matn, video yoki audio xabarlarni yuboring.
