Отладка активации триальной подписки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,7 +17,7 @@ message.unsupported.format=I can’t work with files in this format yet. The sup
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
 message.unsupported.file=I can’t work with files in this format yet. Your file mime type is <b>{0}</b>. The supported file formats can be found \
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
-message.welcome=Welcome to the <b>free</b> converter bot. \n\n\
+message.welcome=Welcome to the converter bot. \n\n\
 The instruction manual and all available formats can be found in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.\n\
 Stay tuned! Developers are working on adding new features.\n\n\
 If you find a bug or have any suggestions for improving the bot or questions, write to us \
