--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -16,7 +16,7 @@ message.unsupported.format=Hozircha men ushbu formatdagi fayllar bilan ishlashga
 <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin.
 message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmayman. Maym fayl turi <b>{0}</b>. Qo''llab-quvvatlanadigan formatlar ro''yxati siz \
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
-message.welcome=<b>Bepul</b> bot konverteriga xush kelibsiz.\n\n\
+message.welcome=Bot konverteriga xush kelibsiz.\n\n\
 Siz bot bilan ishlash bo''yicha ko''rsatmalarni va qo''llab-quvvatlanadigan formatlarning to''liq ro''yxatini topishingiz mumkin \
 Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">SmartFileUtils Bot</a>. \n\
 Yangiliklarni kuzatib boring, xabardor bo''lib boring; Biz bilan qoling! Ishlab chiquvchilar doimiy ravishda botni takomillashtirish ustida ishlamoqdalar. \
@@ -26,9 +26,8 @@ Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa 
 Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
 ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
 Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman. \n\n\
-<b>Mening so''rovlarim</b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
-va konversiya so''rovi haqidagi boshqa ma''lumotlar.\n\n\
+Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. \
+Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
 Mening buyruqlarim:\n\
 {0}
 message.convert.warnings=<b>Ogohlantirishlar:</b>\n{0}
@@ -42,9 +41,8 @@ Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa 
 Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
 ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
 Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
-<b> Mening so''rovlarim</b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
-va konversiya so''rovi haqidagi boshqa ma''lumotlar.\n\n\
+Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. \
+Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
 Mening buyruqlarim:\n\
 {0}
 message.formats=To'liq ro'yxatni <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>. maqolasida topishingiz mumkin. \n\
