Сжатие аудио в mp3

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -135,7 +135,10 @@ video.editing.resolution.changed=Оригинальное разрешение: 
 message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Вы должны знать, что увеличение разрешения видео не означает улучшения качества.</i>
 message.incompressible.audio=Я не могу сжать это аудио
-message.compress.audio.output.format=Результат будет отправлен как: <b>Аудио</b>
+message.compress.audio.output.format=Формат сжатия: <b>{0}</b>
+message.compress.audio.format.updated=Формат сжатия обновлен
 message.compress.audio.bitrate.updated=Bitrate обновлен
 message.pdf.images.epub=Невозможно преобразовать текст из pdf в epub, поэтому pdf был преобразован в epub в виде картинок
 conversion.timed.out=Время вышло. Конвертация не удалась.
+opus.compression.command.description=Opus
+mp3.compression.command.description=Mp3
