--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -132,7 +132,10 @@ video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
-message.compress.audio.output.format=Result will be sent as: <b>Audio</b>
+message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.bitrate.updated=Bitrate updated
+message.compress.audio.format.updated=Compression format updated
 message.pdf.images.epub=It is impossible to convert text from pdf to epub, so pdf was converted to epub in the form of pictures
 conversion.timed.out=Timed out. Conversion failed.
+opus.compression.command.description=Opus
+mp3.compression.command.description=Mp3
