--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -137,7 +137,10 @@ Natijada echim: <b>{1}</b>
 message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
-message.compress.audio.output.format=Natija quyidagicha yuboriladi: <b>Audio</b>
+message.compress.audio.output.format=Siqish formati: <b>{0}</b>
+message.compress.audio.format.updated=Siqish formati yangilandi
 message.compress.audio.bitrate.updated=Bitrate yangilandi
 message.pdf.images.epub=Matnni pdf-dan epubga aylantirish mumkin emas, shuning uchun pdf rasmlar shaklida epubga aylantirildi
 conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
+opus.compression.command.description=Opus
+mp3.compression.command.description=Mp3
