Сжатие по умолчанию

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -139,3 +139,5 @@ message.pdf.images.epub=It is impossible to convert text from pdf to epub, so pd
 conversion.timed.out=Timed out. Conversion failed.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
+message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
+Use the /acompress command if you want to choose another bitrate or compression format.</i>
