--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -142,3 +142,5 @@ message.pdf.images.epub=Невозможно преобразовать текс
 conversion.timed.out=Время вышло. Конвертация не удалась.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
+message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - {0}, формат сжатия - {1}. \
+Используйте команду /acompress, если хотите выбрать другой битрейт или формат.</i>
