--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -144,3 +144,5 @@ message.pdf.images.epub=Matnni pdf-dan epubga aylantirish mumkin emas, shuning u
 conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
+message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}. \
+Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
