Corrupted video checking

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -144,3 +144,4 @@ opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - {0}, формат сжатия - {1}. \
 Используйте команду /acompress, если хотите выбрать другой битрейт или формат.</i>
+message.corrupted.video=Ваше видео повреждено и не может быть обработано
