--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -146,3 +146,4 @@ opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
+message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
