Corrupted video checking

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -141,4 +141,4 @@ opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
-message.corrupted.video=Your video is damaged and invalid and can't be processed
+message.corrupted.video=Your video is damaged and can't be processed
