Фикс сообщения для узб

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -94,7 +94,7 @@ uploading.step=Yuklanmoqda
 converting.step=Konversiya
 waiting.step=Qayta ishlashni kutish
 message.compress.queued=Ushbu fayl siqiladi\n\
-Global navbatda sizning joyingiz <b>{0}</b>
+Global navbatdagi joy: <b>{0}</ b>
 message.dont.send.new.request=Yangi faylni yuklamang, aks holda joriy so'rov bekor qilinadi.
 extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yangi faylni topshirmang yoki u bekor qilinadi.
 message.pdf.images.unzip.bot=Bu erda barcha rasmlar bilan arxivdan. \
@@ -130,7 +130,7 @@ message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
 message.resolution.selected=Ruxsat tanlandi
 message.send.video.to.edit=Birinchidan, piksellar sonini o'zgartirish uchun menga video yuboring
 message.video.will.be.edited=Video o''lchamlari o''zgartiriladi \n\
-Global navbatda sizning joyingiz: b>{0}</b>
+Global navbatdagi joy: <b>{0}</ b>
 video.editing.step=Ruxsatni o'zgartirish
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
