--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -81,7 +81,7 @@ message.custom.stats=<b>Очередь</b>\n\
 <b>Активность</b>\n\
 Сегодня: <b>{6}</b>
 message.conversion.stats=Status: <b>{0}</b>\n\
-Format: <b>{1}</b>\n\
+Format: <b>{1}/b>\n\
 Target format: <b>{2}</b>\n\
 Created at: <b>{3}</b>\n\
 Started at: <b>{4}</b>\n\
