Реализовать создание видео из картинки и аудио

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,7 +101,7 @@ message.merge.pdfs.welcome=Send me pdf files and when finished choose <b>MERGE</
 merge.command.name=MERGE
 merge.command.description=Merge pdf files
 message.merge.pdfs.no.files=You haven't sent files to merge. Send me pdf files at first.
-cancel.merge.pdfs.command.name=Cancel files
+cancel.files.command.name=Cancel files
 message.merge.pdfs.canceled=Canceled <b>{0}</b> files
 message.merge.pdfs.non.pdf.file=Send me pdf files
 merging.step=Merging
@@ -142,3 +142,8 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
+message.vmake.welcome=Send me an audio and image to make a video
+message.vmake.awaiting.image=Okay you sent audio, now send me an <b>image</b> to make a video
+message.vmake.awaiting.audio=Okay you sent image, now send me an <b>audio</b> to make a video
+vmake.command.name=Make a video
+message.vmake.files.canceled=Files canceled. Send me an audio and image to make a video.
