--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -105,7 +105,7 @@ message.merge.pdfs.welcome=Pdf fayllarini yuboring va tugagandan so'ng birlashis
 merge.command.name=MERGE
 merge.command.description=PDF fayllarini birlashtirish
 message.merge.pdfs.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga pdf fayllarini yuboring.
-cancel.merge.pdfs.command.name=Fayllarni bekor qiling
+cancel.files.command.name=Fayllarni bekor qiling
 message.merge.pdfs.canceled=Bekor qilindi <b>{0}</b> fayllar
 message.merge.pdfs.non.pdf.file=Menga pdf fayllarini yuboring
 message.merge.pdfs.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
@@ -147,3 +147,8 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
 message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
+message.vmake.welcome=Video qilish uchun menga audio va rasm yuboring
+message.vmake.awaiting.image=Xo'sh, siz ovozni yubordingiz, endi menga video yaratish uchun <b>rasm</b> yuboring
+message.vmake.awaiting.audio=Xo'sh, siz rasmni yubordingiz, endi menga video yozish uchun <b>audio</b> ni yuboring
+vmake.command.name=Video yarating
+message.vmake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga audio va rasm yuboring.
