--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,7 +142,7 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
-message.vmake.welcome=Send me an audio and image to make a video
+message.vmake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video
 message.vmake.awaiting.image=Okay you sent audio, now send me an <b>image</b> to make a video
 message.vmake.awaiting.audio=Okay you sent image, now send me an <b>audio</b> to make a video
 vmake.command.name=Make a video
