--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -145,7 +145,7 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - {0}, формат сжатия - {1}. \
 Используйте команду /acompress, если хотите выбрать другой битрейт или формат.</i>
 message.corrupted.video=Ваше видео повреждено и не может быть обработано
-message.vmake.welcome=Отправьте мне аудио и картинку, чтобы создать видео
+message.vmake.welcome=Отправьте мне <b>аудио</b> и <b>картинку</b>, чтобы создать видео
 message.vmake.awaiting.image=Хорошо, вы отправили аудио, теперь пришлите мне <b>картинку</b>, чтобы создать видео
 message.vmake.awaiting.audio=Хорошо, вы отправили картинку, теперь пришлите мне <b>аудио</b>, чтобы сделать видео
 vmake.command.name=Создать видео
