--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,8 +142,9 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
-message.vmake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video
-message.vmake.awaiting.image=Okay you sent audio, now send me an <b>image</b> to make a video
-message.vmake.awaiting.audio=Okay you sent image, now send me an <b>audio</b> to make a video
+message.vmake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video and click <b>Make a video</b> on the keyboard
+message.vmake.awaiting.image=Okay you sent audio, now send me an <b>image</b>
+message.vmake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
 vmake.command.name=Make a video
 message.vmake.files.canceled=Files canceled. Send me an audio and image to make a video.
+message.vmake.click=Great! Now click <b>Make a video</b> on the keyboard
