--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -147,8 +147,9 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
 message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
-message.vmake.welcome=Video qilish uchun menga audio va rasm yuboring
-message.vmake.awaiting.image=Xo'sh, siz ovozni yubordingiz, endi menga video yaratish uchun <b>rasm</b> yuboring
-message.vmake.awaiting.audio=Xo'sh, siz rasmni yubordingiz, endi menga video yozish uchun <b>audio</b> ni yuboring
+message.vmake.welcome=Menga <b>audio</b> va <b>rasm</b> ni yuboring va video yaratish uchun klaviaturangizdagi <b>Video yarating</b> tugmasini bosing
+message.vmake.awaiting.image=Yaxshi, siz audio yubordingiz, endi menga <b>rasm</b> ni yuboring
+message.vmake.awaiting.audio=Yaxshi, siz rasmni yubordingiz, endi menga <b>audio</b> ni yuboring
 vmake.command.name=Video yarating
 message.vmake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga audio va rasm yuboring.
+message.vmake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
