Сжатие аудио в 44100 hz

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -140,11 +140,10 @@ message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
 message.compress.audio.bitrate.updated=Bitrate yangilandi
-message.pdf.images.epub=Matnni pdf-dan epubga aylantirish mumkin emas, shuning uchun pdf rasmlar shaklida epubga aylantirildi
 conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}. \
+message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}, chastotasi - {2}. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
 message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
 message.vmake.welcome=Menga <b>audio</b> va <b>rasm</b> ni yuboring va video yaratish uchun klaviaturangizdagi <b>Video yarating</b> tugmasini bosing
@@ -153,3 +152,5 @@ message.vmake.awaiting.audio=Yaxshi, siz rasmni yubordingiz, endi menga <b>audio
 vmake.command.name=Video yarating
 message.vmake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga audio va rasm yuboring.
 message.vmake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
+message.compress.audio.output.frequency=Chastotani: <b>{0}</b>
+message.compress.audio.frequency.updated=Chastotasi yangilandi
