--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -133,13 +133,14 @@ Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
+message.compress.audio.output.frequency=Frequency: <b>{0}</b>
 message.compress.audio.bitrate.updated=Bitrate updated
+message.compress.audio.frequency.updated=Frequency updated
 message.compress.audio.format.updated=Compression format updated
-message.pdf.images.epub=It is impossible to convert text from pdf to epub, so pdf was converted to epub in the form of pictures
 conversion.timed.out=Timed out. Conversion failed.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
+message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>, frequency - <b>{2}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
 message.vmake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video and click <b>Make a video</b> on the keyboard
