--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,9 +143,15 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>, frequency - <b>{2}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
-message.vmake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video and click <b>Make a video</b> on the keyboard
-message.vmake.awaiting.image=Okay you sent audio, now send me an <b>image</b>
-message.vmake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
-vmake.command.name=Make a video
-message.vmake.files.canceled=Files canceled. Send me an audio and image to make a video.
-message.vmake.click=Great! Now click <b>Make a video</b> on the keyboard
+message.vaimake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video and click <b>Make a video</b> on the keyboard
+message.vaimake.awaiting.image=Okay you sent audio, now send me an <b>image</b>
+message.vaimake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
+vaimake.command.name=Make a video
+message.vaimake.files.canceled=Files canceled. Send me an audio and image to make a video.
+message.vaimake.click=Great! Now click <b>Make a video</b> on the keyboard
+message.vavmerge.welcome=Send me a <b>video</b> and <b>audio</b> to merge and click <b>Merge</b> on the keyboard
+message.vavmerge.awaiting.video=Okay you sent audio, now send me a <b>video</b>
+message.vavmerge.awaiting.audio=Okay you sent video, now send me an <b>audio</b>
+vavmerge.command.name=Merge
+message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
+message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
