--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -146,9 +146,15 @@ mp3.compression.command.description=Mp3
 message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - <b>{0}</b>, формат сжатия - <b>{1}</b>, частота - <b>{2}</b>. \
 Используйте команду /acompress, если хотите выбрать другой битрейт или формат.</i>
 message.corrupted.video=Ваше видео повреждено и не может быть обработано
-message.vmake.welcome=Отправьте мне <b>аудио</b> и <b>картинку</b>, и нажмите <b>Создать видео</b> на клавиатуре, чтобы создать видео
-message.vmake.awaiting.image=Хорошо, вы отправили аудио, теперь пришлите мне <b>картинку</b>
-message.vmake.awaiting.audio=Хорошо, вы отправили картинку, теперь пришлите мне <b>аудио</b>
-vmake.command.name=Создать видео
-message.vmake.files.canceled=Файлы отменены. Отправьте мне аудио и картинку, чтобы создать видео.
-message.vmake.click=Отлично! Теперь нажмите <b>Создать видео</b> на клавиатуре
+message.vaimake.welcome=Отправьте мне <b>аудио</b> и <b>картинку</b>, и нажмите <b>Создать видео</b> на клавиатуре, чтобы создать видео
+message.vaimake.awaiting.image=Хорошо, вы отправили аудио, теперь пришлите мне <b>картинку</b>
+message.vaimake.awaiting.audio=Хорошо, вы отправили картинку, теперь пришлите мне <b>аудио</b>
+vaimake.command.name=Создать видео
+message.vaimake.files.canceled=Файлы отменены. Отправьте мне аудио и картинку, чтобы создать видео.
+message.vaimake.click=Отлично! Теперь нажмите <b>Создать видео</b> на клавиатуре
+message.vavmerge.welcome=Отправьте мне <b>видео</b> и <b>аудио</b>, и нажмите <b>Объединить</b> на клавиатуре
+message.vavmerge.awaiting.image=Хорошо, вы отправили аудио, теперь пришлите мне <b>видео</b>
+message.vavmerge.awaiting.audio=Хорошо, вы отправили видео, теперь пришлите мне <b>аудио</b>
+vavmerge.command.name=Объединить
+message.vavmerge.files.canceled=Файлы отменены. Отправьте мне видео и аудио, для объединения.
+message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
