--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -154,3 +154,9 @@ message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
 message.compress.audio.output.frequency=Chastotani: <b>{0}</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
+message.vavmerge.welcome=Menga <b>video</b> va <b>audio</b> yuboring va klaviaturangizdagi <b>Birlashtirish</b> tugmasini bosing
+message.vavmerge.awaiting.image=Yaxshi, siz audio yubordingiz, endi menga <b>video</b> ni yuboring
+message.vavmerge.awaiting.audio=Yaxshi, siz videoni yubordingiz, endi menga <b>audio</b> ni yuboring
+vavmerge.command.name=Birlashtirish
+message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
+message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
