--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -143,7 +143,7 @@ message.compress.audio.bitrate.updated=Bitrate yangilandi
 conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - {0}, siqishni formati - {1}, chastotasi - {2}. \
+message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - <b>{0}</b>, siqishni formati - <b>{1}</b>, chastotasi - <b>{2}Hz</b>. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
 message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
 message.vaimake.welcome=Menga <b>audio</b> va <b>rasm</b> ni yuboring va video yaratish uchun klaviaturangizdagi <b>Video yarating</b> tugmasini bosing
@@ -152,7 +152,7 @@ message.vaimake.awaiting.audio=Yaxshi, siz rasmni yubordingiz, endi menga <b>aud
 vaimake.command.name=Video yarating
 message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga audio va rasm yuboring.
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
-message.compress.audio.output.frequency=Chastotani: <b>{0}</b>
+message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
 message.vavmerge.welcome=Menga <b>video</b> va <b>audio</b> yuboring va klaviaturangizdagi <b>Birlashtirish</b> tugmasini bosing
 message.vavmerge.awaiting.image=Yaxshi, siz audio yubordingiz, endi menga <b>video</b> ni yuboring
