Отладка images conversion

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -125,7 +125,7 @@ edit.video.command.description=Change resolution
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
 message.send.video.to.edit=At first send me a video to change resolution
-message.video.will.be.edited=video resolution will be changed\n\
+message.video.will.be.edited=Video resolution will be changed\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Changing resolution
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
