--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -64,7 +64,7 @@ Ehtimol, ishlab chiquvchilar tez orada muammoni hal qilishadi va men sizga keyin
 message.incompressible.video=Ushbu videoni siqib ololmayapman
 compressing.step=Siqish
 merging.step=birlashtirish
-formats.command.description=qo'llab-quvvatlanadigan konvertatsiya formatlari
+formats.command.description=konversiya formatlari
 message.text.appended=Matn qo'shildi. Yuborishni davom eting. Tugatgandan so'ng, klaviaturangizdagi formatni tanlang.
 message.files.appended=Fayllar qo'shildi. Yuborishni davom eting. Tugatgandan so'ng, klaviaturangizdagi formatni tanlang.
 message.default.conversion=Hujjatlar, rasmlar, havolalar va matnlarni aylantirish uchun @SmartConverter_bot dan foydalaning
