Более детальная инфа о сжатии и потоковом видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -155,3 +155,5 @@ message.vavmerge.awaiting.audio=Okay you sent video, now send me an <b>audio</b>
 vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
+message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video</i>\n\
+\ud83d\udca1<i><b>STREAM</b> - make streaming video</i>
