--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -160,3 +160,5 @@ message.vavmerge.awaiting.audio=Yaxshi, siz videoni yubordingiz, endi menga <b>a
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
+message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - videoni siqish</i>\n\
+\ud83d\udca1<i><b>STREAM</b> - oqim videosini yaratish</i>
