--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -158,3 +158,5 @@ message.vavmerge.awaiting.audio=Хорошо, вы отправили видео
 vavmerge.command.name=Объединить
 message.vavmerge.files.canceled=Файлы отменены. Отправьте мне видео и аудио, для объединения.
 message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
+message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - сжать видео</i>\n\
+\ud83d\udca1<i><b>STREAM</b> - создать потоковое видео</i>
