Более информативный help мессейдж

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -157,3 +157,6 @@ message.vavmerge.files.canceled=Files canceled. Send me a video and audio to mer
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video</i>\n\
 \ud83d\udca1<i><b>STREAM</b> - make streaming video</i>
+vedit.command.description=change video resolution
+vaimake.command.description=make video from audio and image
+vavmerge.command.description=replace or add audio to video
