--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -160,3 +160,6 @@ message.vavmerge.files.canceled=Файлы отменены. Отправьте 
 message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - сжать видео</i>\n\
 \ud83d\udca1<i><b>STREAM</b> - создать потоковое видео</i>
+vedit.command.description=изменить разрешение видео
+vaimake.command.description=создать видео из картинки и аудио
+vavmerge.command.description=заменить или добавить аудио в видео
