--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -160,3 +160,7 @@ message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
+message.video.cut.welcome=Send me a video to cut
+message.video.cut.start.point=Send me start time to cut in hh:mm:ss. For example: 01:10:05 to start cutting at 1 hour 10 minutes 5 seconds
+message.video.cut.end.point=Send me end time to cut in hh:mm:ss. For example: 02:15:30 to end cutting at 2 hour 15 minutes 30 seconds
+message.video.cut.invalid.end.point=End time must be after start time
