--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -165,3 +165,7 @@ message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - videoni siqish
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
+message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring
+message.video.cut.start.point=Trim boshlanish vaqtini hh: mm: ss formatida yuboring. Masalan: 01:10:05 1 soat 10 minut 5 soniyadan boshlab qirqishni boshlash
+message.video.cut.end.point=Tugatish vaqtini hh: mm: ss formatida yuboring. Masalan: 02:15:30 da 2 soat 15 daqiqa 30 soniya davomida qirqishni tugatish
+message.video.cut.invalid.end.point=Kesishning tugash vaqti boshlanishidan kech bo'lishi kerak
