--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -159,7 +159,8 @@ vavmerge.command.name=Объединить
 message.vavmerge.files.canceled=Файлы отменены. Отправьте мне видео и аудио, для объединения.
 message.vavmerge.click=Отлично! Теперь нажмите <b>Объединить</b> на клавиатуре
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - сжать видео</i>\n\
-\ud83d\udca1<i><b>STREAM</b> - создать потоковое видео</i>
+\ud83d\udca1<i><b>STREAM</b> - создать потоковое видео</i>\n\
+\ud83d\udca1<i><b>MUTE</b> - удалить аудио из видео<i>
 vedit.command.description=изменить разрешение видео
 vaimake.command.description=создать видео из картинки и аудио
 vavmerge.command.description=заменить или добавить аудио в видео
