--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -156,7 +156,8 @@ vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - compress video</i>\n\
-\ud83d\udca1<i><b>STREAM</b> - make streaming video</i>
+\ud83d\udca1<i><b>STREAM</b> - make streaming video</i>\n\
+\ud83d\udca1<i><b>MUTE</b> - remove audio from video<i>
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
