--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -161,7 +161,8 @@ vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
 message.video.conversion.details=\ud83d\udca1<i><b>COMPRESS</b> - videoni siqish</i>\n\
-\ud83d\udca1<i><b>STREAM</b> - oqim videosini yaratish</i>
+\ud83d\udca1<i><b>STREAM</b> - oqim videosini yaratish</i>\n\
+\ud83d\udca1<i><b>MUTE</b> - ovozni videodan olib tashlash<i>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
